<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:context=".DayFragment">

    <LinearLayout
        android:id="@+id/three_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <Button
            android:id="@+id/friday"
            android:text="@string/fri"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/saturday"
            android:text="@string/sat"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/sunday"
            android:text="@string/sun"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/three_days">
        <Button
            android:id="@+id/four"
            android:text="@string/_4_00_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveInput"/>
        <Button
            android:id="@+id/four_thirty"
            android:text="@string/_4_30_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveInput"/>
        <Button
            android:id="@+id/five"
            android:text="@string/_5_00_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveInput"/>
        <Button
            android:id="@+id/five_thirty"
            android:text="@string/_5_30_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveInput"/>
        <Button
            android:id="@+id/six"
            android:text="@string/_6_00_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveInput"/>
        <Button
            android:id="@+id/six_thirty"
            android:text="@string/_6_30_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveInput"/>
        <Button
            android:id="@+id/seven"
            android:text="@string/_7_00_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveInput"/>
        <Button
            android:id="@+id/seven_thirty"
            android:text="@string/_7_30_pm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="giveInput"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>